# taiko-preconfer

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yml  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: check.yml
block-building/: Cargo.toml
block-building/src/: evm_client.rs  http_client.rs  password.rs  slot_model.rs  test_util.rs
block-building/src/taiko/: block_metadata.rs  propose_batch.rs  sign.rs  taiko_l1_client.rs
block-building/src/taiko/contracts/: preconf_whitelist.rs
block-building/tests/: preconfer.rs.bak
crates/block_building/: Cargo.toml
crates/block_building/src/: active_operator_model.rs  base_fee.rs  blob.rs  block.rs  compression.rs  dummy_client.rs  encode_util.rs  header_stream.rs  http_client.rs  lib.rs  rpc_client.rs  slot.rs  slot_model.rs  slot_stream.rs  trigger.rs  util.rs  verification.rs
crates/block_building/src/preconf/: config.rs  confirmation_strategy.rs  error.rs  handover_start_buffer.rs  mod.rs  preconf_blocks.rs  preconfer.rs
crates/block_building/src/taiko/: anchor.rs  base_fee.rs  mod.rs  preconf_blocks.rs  propose_batch.rs  sign.rs  taiko_client.rs  taiko_l1_client.rs
crates/block_building/src/taiko/contracts/: mod.rs  taiko_anchor.rs  taiko_wrapper.rs
crates/block_building/src/taiko/hekla/: addresses.rs  mod.rs
crates/tx-pool/: Cargo.toml
crates/tx-pool/src/: constants.rs  lib.rs  mock_txpool_fetcher.rs  pool.rs  txpool_fetcher.rs
crates/tx_pool/: Cargo.toml
preconfirmation/: Cargo.toml
preconfirmation/src/: active_operator_model.rs  blob.rs  compression.rs  encode_util.rs  lib.rs  log_util.rs  reqwest.rs  secret.rs  slot.rs  slot_model.rs  test_util.rs  time_provider.rs  tx_cache.rs  util.rs  verification.rs
preconfirmation/src/client/: alloy_util.rs  dummy_client.rs  http_client.rs  mod.rs  reqwest.rs  rpc_client.rs
preconfirmation/src/preconf/: block_builder.rs  config.rs  confirmation_strategy.rs  error.rs  handover_start_buffer.rs  mod.rs  preconf_blocks.rs  preconfer.rs  sequencing_monitor.rs  slot_model.rs
preconfirmation/src/stream/: header_stream.rs  l2_head_info_stream.rs  mod.rs  slot_stream.rs
preconfirmation/src/taiko/: anchor.rs  contracts.rs  hekla.rs  mod.rs  propose_batch.rs  sign.rs  taiko_client.rs  taiko_l1_client.rs  taiko_l2_client.rs
preconfirmation/src/taiko/contracts/: mod.rs  taiko_inbox.rs
preconfirmation/src/taiko/hekla/: mod.rs
scripts/: coverage.sh
taiko-preconfer/: Cargo.toml
taiko-preconfer/src/: add_anchor_transaction.rs  confirmation_loop.rs  error.rs  lib.rs  main.rs  onchain_tracking_loop.rs  preconfirmation_loop.rs  rpc.rs  util.rs
tests/data/: txpool_content.json
