
[workspace]
members = ["preconfirmation", "taiko-preconfer"]
resolver = "2"
[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
alloy-consensus = "1.0.9"
alloy-contract = { version = "1.0.17", features = ["pubsub"] }
alloy-eips = { version = "1.0.17", features = ["kzg"] }
alloy-json-rpc = "1.0.17"
alloy-network = "1.0.16"
alloy-provider = { version = "1.0.16", features = [
    "reqwest", "ws"
], default-features = false }
alloy-rlp = "0.3.12"
alloy-rpc-client = "1.0.20"
alloy-rpc-types = "1.0.16"
alloy-rpc-types-engine = "1.0.20"
alloy-rpc-types-eth = "1.0.17"
alloy-signer = "1.0.16"
alloy-signer-local = "1.0.17"
alloy-transport = "1.0.20"
alloy-transport-http = { version = "1.0.9", features = ["hyper", "jwt-auth"] }

alloy-primitives = { version = "1.2.1", default-features = false, features = ["map-foldhash", "getrandom"] }
alloy-sol-types = "1.2.0"

async-stream = "0.3.6"
c-kzg = "2.1.1"
dotenv = "0.15.0"
futures = "0.3.31"
hex = "0.4.3"
http-body-util = "0.1.3"
jsonwebtoken = "9.3.1"
k256 = "0.13.4"
libdeflater = "1.24.0"
mockall = "0.13.1"
reqwest = "0.12.20"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["time"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"

preconfirmation = { path = "./preconfirmation" }
