
[workspace]
members = ["preconfirmation", "taiko-preconfer"]
resolver = "2"
[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
alloy = { version = "1.0.38", features = ["contract", "full", "json-rpc", "rpc-types-engine", "signer-local"] }
alloy-rlp = "0.3.12"
alloy-transport-http = { version = "1.0.23", features = ["hyper", "jwt-auth"] }

async-stream = "0.3.6"
c-kzg = "2.1.5"
dotenv = "0.15.0"
futures = "0.3.31"
hex = "0.4.3"
http-body-util = "0.1.3"
jsonwebtoken = "9.3.1"
k256 = "0.13.4"
libdeflater = "1.24.0"
mockall = "0.13.1"
reqwest = "0.12.23"
serde = "1.0.219"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["time"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"

preconfirmation = { path = "./preconfirmation" }
