[package]
name = "preconfirmation"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-consensus = { workspace = true }
alloy-contract = { workspace = true }
alloy-eips = { workspace = true }
alloy-json-rpc = { workspace = true }
alloy-network = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rlp = { workspace = true }
alloy-rpc-client = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-rpc-types-engine = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-transport = { workspace = true }
alloy-transport-http = { workspace = true }
async-stream = { workspace = true }
c-kzg = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
http-body-util = { workspace = true }
jsonwebtoken = { workspace = true }
k256 = { workspace = true }
libdeflater = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }

[package.metadata.cargo-machete]
ignored = ["alloy-contract"]
