[package]
name = "taiko-preconfer"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy-consensus = { workspace = true }
alloy-contract = { workspace = true }
alloy-json-rpc = { workspace = true }
alloy-network = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-transport = { workspace = true }
dotenv = { workspace = true }
futures = { workspace = true }
preconfirmation = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
