[package]
name = "taiko-preconfer"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy = { workspace = true }
dotenv = { workspace = true }
futures = { workspace = true }
preconfirmation = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
