[package]
name = "block-building"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-consensus = { workspace = true }
alloy-contract = { workspace = true }
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-signer = { workspace = true }
alloy-sol-types = { workspace = true }
eyre = { workspace = true }
k256 = { workspace = true }

[dev-dependencies]
alloy-signer-local = { workspace = true }
num-bigint = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["alloy-contract"]
