[package]
name = "block-building"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-consensus = { workspace = true }
alloy-contract = { workspace = true }
alloy-eips = { workspace = true }
alloy-json-rpc = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-rpc-client = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-signer = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-transport = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true }
libdeflater = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
alloy-signer-local = { workspace = true }
mockall = { workspace = true }
tokio = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["alloy-contract"]
