[package]
name = "tx-pool"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-consensus = { workspace = true, features = ["k256"] }
alloy-eips = { workspace = true }

alloy-primitives = { workspace = true, features = ["serde"] }
alloy-rpc-client = { workspace = true }
alloy-rpc-types-engine = { workspace = true, features = ["jwt", "serde"] }
alloy-transport-http = { workspace = true, features = ["jwt-auth"] }
eyre = { workspace = true }
http-body-util = { workspace = true }

parking_lot = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }

async-trait = { version = "0.1" }
