[package]
name = "tx-pool"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rpc-client = { workspace = true }
alloy-rpc-types-engine = { workspace = true, features = ["jwt", "serde"] }
alloy-transport-http = { workspace = true, features = ["jwt-auth"] }
eyre = { workspace = true }
http-body-util = { workspace = true }

reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }

async-trait = { version = "0.1" }
